--- a/pages/fundamentals/l1.mdx
+++ b/pages/fundamentals/l1.mdx
@@ -1,1 +1,11 @@
 # L1 verification
+
+Sur Starknet la verification L1 se fait etc etc etc
+
+## Get L1 key
+
+*tuto get l1 url access key from listed providers*
+
+## How does it work
+
+*How does the l1 verifiaction work on Deoxys tuto*
