--- a/pages/get_started/install.mdx
+++ b/pages/get_started/install.mdx
@@ -1,5 +1,10 @@
 import { Steps } from 'nextra-theme-docs'
 import { Callout } from 'nextra-theme-docs'
+import { Cards, Card } from 'nextra/components'
+import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
+import { faLinux, faApple, faWindows } from '@fortawesome/free-brands-svg-icons';
+import { Tabs, Tab } from 'nextra/components'
+
 
 # Installing Deoxys
 
@@ -17,23 +22,76 @@ You just need to install it, fill out your parameters and enjoy!
 
 <Steps>
 
-### Install Deoxys App
+### Install app
 
-We first need to make sure you have everything needed to complete this tutorial.
+First you'll need to download the Deoxys app for your operating system
 
-| OS  |  Version | Releases |
-|---|---|---|
-| Linux  | Deoxys App 1.0.0-nightly for Ubuntu (18.04 and later) | [Download](link) |
-| MacOs  | Deoxys Node Manager 1.0.0-nightly macOS (10.15 Catalina and later) | [Download](link) |
-| Windows  | Deoxys Node Manager 1.0.0-nightly Windows 10 and later  | [Download](link) |
+<Cards>
+  <Card 
+    icon={<FontAwesomeIcon icon={faLinux} />} 
+    title="Download" 
+    description="Deoxys App 1.0.0-nightly for Ubuntu (18.04 and later)" 
+    href="your-download-link-for-linux" 
+  />
+  <Card 
+    icon={<FontAwesomeIcon icon={faApple} />} 
+    title="Download" 
+    description="Deoxys Node Manager 1.0.0-nightly macOS (10.15 Catalina and later)" 
+    href="your-download-link-for-macos" 
+  />
+  <Card 
+    icon={<FontAwesomeIcon icon={faWindows} />} 
+    title="Download" 
+    description="Deoxys Node Manager 1.0.0-nightly Windows 10 and later" 
+    href="your-download-link-for-windows" 
+  />
+</Cards>
+
+<br />
+<br />
+
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="../static/img/main-app.png" height="500" width="500" style={{ borderRadius: '10px' }} />
+</div>
+
+### Launch it
+
+Pour lancer la Deoxys App telecharge precedament il vous suffit de suivre les etapes suivantes selon votre operating system:
+
+{/* prettier-ignore */}
+<Tabs items={['MacOs', 'Linux', 'Windows']}>
+  <Tab>**MacOs**: Fast, disk space efficient package manager.</Tab>
+  <Tab>**Linux** is a package manager for the JavaScript programming language.</Tab>
+  <Tab>**Windows** is a software packaging system.</Tab>
+</Tabs>
 
 ### Setup parameters
 
+Vous devrez a present mettre en place les parametre necessaire afin de run votre noeud comme bon vous semble.
+Pour plus d'information sur les parametres possible veuillez vous rendre dans la category [Configuration](../fundamentals/configuration)
+
+<Callout type="warning" emoji="⚠">
+  Parmis ces parametre il vous faudra obligatoirement un L1 endpoint access url que vous pourrez simplement obtenir en suivant le tutoriel present dans la categorie [L1 verification](../fundamentals/l1)
+</Callout>
+
+<br />
+<br />
+
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="../static/img/config-app.png" height="500" width="500" style={{ borderRadius: '10px' }} />
+</div>
+
 ### Run Deoxys
 
-Fetch the code from the Official [Deoxys](https://github.com/KasarLabs/deoxys) repository in the folder of your choice.
+Lorsque vos parametre sont configure correctement il vous suffit a present de clicker sur `Launch Deoxys` et d'enjoy!
+Pour plus d'information sur la Deoxys App veuillez vous rendre dans la categorie [Tsukuyomi](../tools/tsukuyomi)
 
-### 👽
+<br />
+<br />
+
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="../static/img/run-app.png" height="500" width="500" style={{ borderRadius: '10px' }} />
+</div>
 
 </Steps>
 
@@ -45,44 +103,61 @@ Fetch the code from the Official [Deoxys](https://github.com/KasarLabs/deoxys) r
 
 <Steps>
 
-### Install dependencies
+### Install Docker
 
 
-| Dependency  |  Version | Linux | MacOs | Windows
-|---|---|---|---|---|
-| Docker  | rustc 1.69.0-nightly  | [Download](link) | [Download](link) | [Download](link) |
+{/* prettier-ignore */}
+{/* prettier-ignore */}
+<Tabs items={['MacOS', 'Linux', 'Windows']}>
+  <Tab>
+    **MacOS**: To install Docker on MacOS, follow these steps:
+    1. Visit the [Docker Hub](https://hub.docker.com/editions/community/docker-ce-desktop-mac/) and download Docker Desktop for Mac.
+    2. Open the downloaded `.dmg` file and drag the Docker icon to your Applications folder to begin the installation.
+    3. Once installed, launch Docker from your Applications folder. Docker will request your admin password to complete the setup.
+    4. After installation, you can open a terminal and run `docker --version` to verify that Docker has been installed successfully.
+  </Tab>
+  <Tab>
+    **Linux**: Docker installation on Linux varies by distribution, but here are the general steps:
+    1. Update your package manager index by running `sudo apt-get update` (This command is for distributions using `apt` like Ubuntu or Debian).
+    2. Install prerequisite packages which allow `apt` to use packages over HTTPS: `sudo apt-get install apt-transport-https ca-certificates curl software-properties-common`.
+    3. Add Docker's official GPG key: `curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -`.
+    4. Verify that you now have the key with the fingerprint by searching for the last 8 characters of the fingerprint.
+    5. Set up the Docker repository by running `sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"`.
+    6. Update the `apt` package index again: `sudo apt-get update`.
+    7. Install Docker: `sudo apt-get install docker-ce`.
+    8. To verify Docker is installed correctly, run `docker run hello-world`.
+    Note: The above commands are tailored for Ubuntu. Please adjust for your particular Linux distribution.
+  </Tab>
+  <Tab>
+    **Windows**: To install Docker on Windows, ensure you meet the following requirements:
+    - Windows 10 64-bit: Pro, Enterprise, or Education (Build 15063 or later).
+    - Hyper-V and Containers Windows features must be enabled.
+    Here are the steps:
+    1. Visit the [Docker Hub](https://hub.docker.com/editions/community/docker-ce-desktop-windows/) to download Docker Desktop for Windows.
+    2. Run the downloaded Docker Desktop installer.
+    3. Follow the installation instructions. You might be prompted to logout and log back in, or reboot your computer before you can use Docker.
+    4. After installation, run Docker by searching for it in the Start menu and selecting Docker Desktop.
+    5. To verify Docker has been installed, open a command prompt and enter `docker --version`.
+    Note: If your system does not support Hyper-V or if you are running Windows 10 Home, you may need to install Docker Toolbox instead.
+  </Tab>
+</Tabs>
 
 
-### Get
+### Run docker image
 
-Fetch the code from the Official [Deoxys](https://github.com/KasarLabs/deoxys) repository in the folder of your choice.
+Lorsque vous avez correctement installé docker vous pouvez a present lancer Deoxys via ses images disponibles ici: [deoxys-v0.1.0-nightly](https://link).
+Ceci est une configuration par defaut pour plus d'information sur les configuration possible, veuillez vous rendre dans la category [Configuration](../fundamentals/configuration)
+
 
 ```bash
-cd <your-destination-path>
-git clone https://github.com/KasarLabs/deoxys
+
 ```
 
-### Build
-
-Then let's build the dependencies in `release` mode
+### Check logs
 
 ```bash
-cd deoxys
-cargo build --release
+
 ```
-
-### Run
-
-**Single-Node Development Chain**
-
-This command will start the Deoxys client which will begin the synchronization with the Starknet network automatically:
-
-```bash
-cargo run --release -- --dev --sealing=manual 
-```
-
-
-### 👽
 
 </Steps>
 
@@ -99,7 +174,7 @@ We first need to make sure you have everything needed to complete this tutorial.
 | Rust  | rustc 1.69.0-nightly  | `curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs \| sh` <br></br>`rustup toolchain install nightly` |
 
 
-### Get
+### Get code
 
 Fetch the code from the Official [Deoxys](https://github.com/KasarLabs/deoxys) repository in the folder of your choice.
 
@@ -108,7 +183,7 @@ cd <your-destination-path>
 git clone https://github.com/KasarLabs/deoxys
 ```
 
-### Build
+### Build program
 
 Then let's build the dependencies in `release` mode
 
@@ -117,7 +192,7 @@ cd deoxys
 cargo build --release
 ```
 
-### Run
+### Run Deoxys
 
 **Single-Node Development Chain**
 
@@ -126,9 +201,6 @@ This command will start the Deoxys client which will begin the synchronization w
 ```bash
 cargo run --release -- --dev --sealing=manual 
 ```
-
-
-### 👽
 
 </Steps>
 
