cleaned logo for doc

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,5 @@
+import { BigLogo } from '../theme.config.tsx'
+
 # Introduction and overview
 Welcome to the Deoxys Starknet full node Client documentation! Deoxys is a Starknet full node client implementation written in [Rust](https://www.rust-lang.org/) and powered by [Substrate](https://substrate.io/).
 Established by [Kasar Labs](https://kasar.io) and powered by the Starnet pallet from the [Starkware](https://starkware.co) exploration team, we developed a flagship client that prioritizes both performance and adaptability.
@@ -11,5 +13,5 @@ Your experience and feedback are invaluable to us, and we encourage your input t
 <br />
 <br />
 <div style={{ display: 'flex', justifyContent: 'center' }}>
-  <img src="../static/img/deoxys-about.gif" height="400" width="400" style={{ borderRadius: '10px' }} />
+  <BigLogo />
 </div>
