--- a/pages/interacting/methods.mdx
+++ b/pages/interacting/methods.mdx
@@ -1,13 +1,93 @@
-## StarkNet Node JSON-RPC API Calls
+import { Steps } from 'nextra-theme-docs'
+import { Callout } from 'nextra-theme-docs'
+import { Cards, Card } from 'nextra/components'
+import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
+import { faLinux, faApple, faWindows } from '@fortawesome/free-brands-svg-icons';
+import { Tabs, Tab } from 'nextra/components'
 
-Each JSON-RPC call provides a different functionality of the StarkNet Node. The detailed information of each call can be expanded upon:
+# Starknet JSON-RPC methods
+
+<Callout type="info" emoji="ℹ️">
+  **Info**: Deoxys is currently supporting the latest version of Starknet mainnet official [JSON-RPC specs](https://github.com/starkware-libs/starknet-specs). For more informations regarding the current and upcoming releases please reffer to the [Version](/about/version) section.
+</Callout>
+
+The primary functionality of a full node is to access the state of the network it synchronizes with. To facilitate this, Starknet has implemented a list of access methods that can be found in the official [JSON-RPC specs](https://github.com/starkware-libs/starknet-specs). Currently, these methods fall into three categories:
+
+- **Read-Only Access Methods**: These methods provide access to network information in a read-only mode, meaning they do not alter the network's state. Some offer static access while others might trigger client execution calls.
+- **Trace Generation Methods**: These methods generate a trace from a transaction's execution to provide detailed information about state changes.
+- **Write Methods**: These methods aim to directly modify Starknet's state, for example by deploying a new contract or executing a transaction.
+
+<Callout type="warning" emoji="⚠">
+**Warning**: Write methods are not executed by full node clients themselves but are merely forwarded to the Sequencer, which is responsible for constructing the blocks and state or returning the corresponding error.
+</Callout>
+
+Each method adheres to a schema that may or may not contain parameters and may return a result or an error. A method is structured as follows:
+
+```json
+{
+    "name": "starknet_ followed by the name of your method",
+    "summary": "Description summary of your method",
+    "params?": [
+        {
+            "name": "Parameter A name",
+            "description": "Description of Parameter A",
+            "required": true or false,
+            "schema": {
+                "title": "Title of the parameter schema",
+                "PARAMETER_A_TYPE"
+            }
+        },
+        {
+            "name": "Parameter B name",
+            "description": "Description of Parameter B",
+            "required": true or false,
+            "schema": {
+                "title": "Title of the parameter schema",
+                "PARAMETER_B_TYPE"
+            }
+        }
+    ],
+    "result": {
+        "name": "Result",
+        "description": "Description of the result",
+        "schema": {
+            "title": "Title of the result schema",
+            "oneOf?": [
+                {
+                    "title": "Expected output A",
+                    "RESULT_A_TYPE"
+                },
+                {
+                    "title": "Expected output B",
+                    "RESULT_B_TYPE"
+                }
+            ]
+        }
+    },
+    "errors": [
+        {
+            "ERROR_TYPE"
+        }
+    ]
+}
+```
+
+Each method has its own specific features and schema. Detailed information on each call can be expanded upon for the following APIs:
+
+<Callout type="warning" emoji="⚠">
+  **Warning**: Please refer to the official [JSON-RPC specs](https://github.com/starkware-libs/starknet-specs) for up to date data.
+</Callout>
+
+<Callout type="info" emoji="ℹ️">
+  **Info**: You can play with the [Voyager playground](https://rpc-request-builder.voyager.online/) or the [OPEN-RPC](https://playground.open-rpc.org/?uiSchema%5BappBar%5D%5Bui:splitView%5D=false&schemaUrl=https://raw.githubusercontent.com/starkware-libs/starknet-specs/master/api/starknet_api_openrpc.json&uiSchema%5BappBar%5D%5Bui:input%5D=false&uiSchema%5BappBar%5D%5Bui:darkMode%5D=true&uiSchema%5BappBar%5D%5Bui:examplesDropdown%5D=false) interface to get more familiar with those methods.
+</Callout>
+
+## Read API
 
 ### `starknet_specVersion`
 
 <details>
 <summary>Returns the version of the Starknet JSON-RPC specification being used.</summary>
-<br/>
-
 - **Params**: None
 - **Result**: Semver of Starknet's JSON-RPC spec being used (type: string)
   
@@ -17,21 +97,32 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Get block information with transaction hashes given the block id.</summary>
-<br/>
 
 - **Params**: 
   - `block_id`: The hash of the requested block, or number (height) of the requested block, or a block tag (required)
 - **Result**: The resulting block information with transaction hashes
 - **Errors**:
   - `BLOCK_NOT_FOUND`: If the specified block does not exist
-  
 </details>
+
+### `starknet_getBlockWithReceipts`
+
+<details>
+<summary>Get block information with transaction hashes given the block id.</summary>
+
+- **Params**: 
+  - `block_id`: The hash of the requested block, or number (height) of the requested block, or a block tag (required)
+- **Result**: The resulting block information with transaction hashes
+- **Errors**:
+  - `BLOCK_NOT_FOUND`: If the specified block does not exist
+</details>
+
 
 ### `starknet_getBlockWithTxs`
 
 <details>
 <summary>Get block information with full transactions given the block id.</summary>
-<br/>
+
 
 - **Params**: 
   - `block_id`: The hash of the requested block, or number (height) of the requested block, or a block tag (required)
@@ -45,7 +136,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Get the information about the result of executing the requested block.</summary>
-<br/>
+
 
 - **Params**: 
   - `block_id`: The hash of the requested block, or number (height) of the requested block, or a block tag (required)
@@ -59,7 +150,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Get the value of the storage at the given address and key.</summary>
-<br/>
+
 
 - **Params**: 
   - `contract_address`: The address of the contract to read from (required)
@@ -76,7 +167,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Gets the transaction status, potentially indicating if the transaction is still in the mempool or has been dropped.</summary>
-<br />
+
 
 - **Params**: 
   - `transaction_hash`: The hash of the requested transaction (required)
@@ -92,7 +183,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Retrieves the details and status of a submitted transaction.</summary>
-<br />
+
 
 - **Params**: 
   - `transaction_hash`: The hash of the requested transaction (required)
@@ -107,7 +198,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Obtains the details of a transaction by a specified block id and index within that block. If not found, returns null.</summary>
-<br />
+
 
 - **Params**: 
   - `block_id`: The hash, number (height), or tag of the requested block (required)
@@ -124,7 +215,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Acquires the receipt of a transaction using its hash.</summary>
-<br />
+
 
 - **Params**: 
   - `transaction_hash`: The hash of the requested transaction (required)
@@ -139,7 +230,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Fetches the contract class definition within a given block associated with a specified hash.</summary>
-<br />
+
 
 - **Params**: 
   - `block_id`: The hash, number (height), or tag of the requested block (required)
@@ -156,7 +247,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Retrieves the class hash of a contract deployed at a specific address within a given block.</summary>
-<br />
+
 
 - **Params**: 
   - `block_id`: The hash, number (height), or tag of the requested block (required)
@@ -173,7 +264,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Get the contract class definition in the given block at the given address.</summary>
-<br />
+
 
 - **Params**: 
   - `block_id`: The hash of the requested block, or number (height) of the requested block, or a block tag (required)
@@ -190,7 +281,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Get the number of transactions in a block given a block id.</summary>
-<br />
+
 
 - **Description**: Returns the number of transactions in the designated block.
 - **Params**: 
@@ -206,7 +297,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Call a StarkNet function without creating a StarkNet transaction.</summary>
-<br />
+
 
 - **Description**: Calls a function in a contract and returns the return value. Using this call will not create a transaction; hence, will not change the state.
 - **Params**: 
@@ -225,7 +316,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Estimate the fee for StarkNet transactions.</summary>
-<br />
+
 
 - **Description**: Estimates the resources required by transactions when applied on a given state.
 - **Params**: 
@@ -244,7 +335,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Estimate the L2 fee of a message sent on L1.</summary>
-<br />
+
 
 - **Params**: 
   - `message`: The message's parameters (required)
@@ -262,7 +353,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Get the most recent accepted block number.</summary>
-<br />
+
 
 - **Result**: 
   - `result`: The latest block number
@@ -275,7 +366,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Get the most recent accepted block hash and number.</summary>
-<br />
+
 
 - **Result**: 
   - `result`: The latest block hash and number
@@ -288,7 +379,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Return the currently configured StarkNet chain id.</summary>
-<br />
+
 
 - **Result**: 
   - `result`: The chain id this node is connected to
@@ -299,7 +390,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Returns an object about the sync status, or false if the node is not synching.</summary>
-<br />
+
 
 - **Result**: 
   - `syncing`: The state of the synchronization, or false if the node is not synchronizing
@@ -310,7 +401,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Returns all events matching the given filter.</summary>
-<br />
+
 
 - **Params**: 
   - `filter`: The conditions used to filter the returned events (required)
@@ -328,7 +419,7 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 
 <details>
 <summary>Get the nonce associated with the given address in the given block.</summary>
-<br />
+
 
 - **Params**: 
   - `block_id`: The hash of the requested block, or number (height) of the requested block, or a block tag (required)
@@ -338,5 +429,136 @@ Each JSON-RPC call provides a different functionality of the StarkNet Node. The 
 - **Errors**:
   - `BLOCK_NOT_FOUND`: If the block does not exist
   - `CONTRACT_NOT_FOUND`: If the contract at the given address does not exist
+  
+</details>
+
+## Trace API
+
+### `starknet_traceTransaction`
+
+<details>
+<summary>For a given executed transaction, return the trace of its execution, including internal calls.</summary>
+
+
+- **Params**:
+  - `transaction_hash`: The hash of the transaction to trace (required)
+- **Result**:
+  - `trace`: The function call trace of the transaction designated by the given hash
+- **Errors**:
+  - `TXN_HASH_NOT_FOUND`: If the transaction hash does not exist
+  - `NO_TRACE_AVAILABLE`: If no trace is available for the transaction
+  
+</details>
+
+### `starknet_simulateTransactions`
+
+<details>
+<summary>Simulate a given sequence of transactions on the requested state, and generate the execution traces.</summary>
+
+
+- **Params**:
+  - `block_id`: The hash of the requested block, or number (height) of the requested block, or a block tag, for the block referencing the state to call the transaction on (required)
+  - `transactions`: The transactions to simulate (required)
+  - `simulation_flags`: Describes what parts of the transaction should be executed (required)
+- **Result**:
+  - `simulated_transactions`: The execution trace and consumed resources of the required transactions
+- **Errors**:
+  - `BLOCK_NOT_FOUND`: If the specified block does not exist
+  - `TRANSACTION_EXECUTION_ERROR`: If a transaction simulation fails
+  
+</details>
+
+### `starknet_traceBlockTransactions`
+
+<details>
+<summary>Retrieve traces for all transactions in the given block.</summary>
+
+
+- **Params**:
+  - `block_id`: The hash of the requested block, or number (height) of the requested block, or a block tag (required)
+- **Result**:
+  - `traces`: The traces of all transactions in the block
+- **Errors**:
+  - `BLOCK_NOT_FOUND`: If the block does not exist
+  
+</details>
+
+
+## Write API
+
+### `starknet_addInvokeTransaction`
+
+<details>
+<summary>Submit a new transaction to be added to the chain.</summary>
+
+
+- **Params**:
+  - `invoke_transaction`: The information needed to invoke the function (or account, for version 1 transactions) (required)
+- **Result**:
+  - `result`: Contains the hash of the invoke transaction
+    - `transaction_hash`: The hash of the invoke transaction
+- **Errors**:
+  - `INSUFFICIENT_ACCOUNT_BALANCE`: If the account balance is insufficient
+  - `INSUFFICIENT_MAX_FEE`: If the provided max fee is insufficient
+  - `INVALID_TRANSACTION_NONCE`: If the transaction nonce is invalid
+  - `VALIDATION_FAILURE`: If the transaction fails validation checks
+  - `NON_ACCOUNT`: If a non-account tries to execute an account-specific transaction
+  - `DUPLICATE_TX`: If the transaction is a duplicate
+  - `UNSUPPORTED_TX_VERSION`: If the transaction version is unsupported
+  - `UNEXPECTED_ERROR`: In case of an unexpected error
+  
+</details>
+
+### `starknet_addDeclareTransaction`
+
+<details>
+<summary>Submit a new class declaration transaction.</summary>
+
+
+- **Params**:
+  - `declare_transaction`: Declare transaction required to declare a new class on Starknet (required)
+- **Result**:
+  - `result`: Contains the hash of the declare transaction and the hash of the declared class
+    - `transaction_hash`: The hash of the declare transaction
+    - `class_hash`: The hash of the declared class
+- **Errors**:
+  - `CLASS_ALREADY_DECLARED`: If the class has already been declared
+  - `COMPILATION_FAILED`: If the compilation of the class failed
+  - `COMPILED_CLASS_HASH_MISMATCH`: If the compiled class hash does not match the declared one
+  - `INSUFFICIENT_ACCOUNT_BALANCE`: If the account balance is insufficient
+  - `INSUFFICIENT_MAX_FEE`: If the max fee provided is insufficient
+  - `INVALID_TRANSACTION_NONCE`: If the transaction nonce is invalid
+  - `VALIDATION_FAILURE`: If the transaction fails validation checks
+  - `NON_ACCOUNT`: If a non-account tries to execute an account-specific transaction
+  - `DUPLICATE_TX`: If the transaction is a duplicate
+  - `CONTRACT_CLASS_SIZE_IS_TOO_LARGE`: If the declared contract class is too large
+  - `UNSUPPORTED_TX_VERSION`: If the transaction version is unsupported
+  - `UNSUPPORTED_CONTRACT_CLASS_VERSION`: If the contract class version is unsupported
+  - `UNEXPECTED_ERROR`: In case of an unexpected error
+  
+</details>
+
+### `starknet_addDeployAccountTransaction`
+
+<details>
+<summary>Submit a new deploy account transaction.</summary>
+
+
+- **Params**:
+  - `deploy_account_transaction`: The deploy account transaction (required)
+- **Result**:
+  - `result`: Contains the hash of the deploy transaction and the address of the new contract
+    - `transaction_hash`: The hash of the deploy transaction
+    - `contract_address`: The address of the new contract
+- **Errors**:
+  - `INSUFFICIENT_ACCOUNT_BALANCE`: If the account balance is insufficient
+  - `INSUFFICIENT_MAX_FEE`: If the provided max fee is insufficient
+  - `INVALID_TRANSACTION_NONCE`: If the transaction nonce is invalid
+  - `VALIDATION_FAILURE`: If the transaction fails validation checks
+  - `NON_ACCOUNT`: If a non-account tries to execute an account-specific transaction
+  - `CLASS_HASH_NOT_FOUND`: If the class hash referred to by the transaction cannot be found
+  - `DUPLICATE_TX`: If the transaction is a duplicate
+  - `UNSUPPORTED_TX_VERSION`: If the transaction version is unsupported
+  - `UNEXPECTED_ERROR`: In case of an unexpected error
   
 </details>
