--- a/pages/get_started/install.mdx
+++ b/pages/get_started/install.mdx
@@ -11,9 +11,160 @@ import { Tabs, Tab } from 'nextra/components'
 In this section, we will guide you through the build and run process so that you can run your own Deoxys client, and query the Starknet blockchain as smoothly as possible.
 
 We want anyone to be able to launch a Deoxys full node, which is why we've divided this section into 3 difficulty levels:
+- [**Low-level**](#low-level-installation-from-source) (from source directly)
+- [**Mid-level**](#mid-level-installation-from-docker) (from Docker or script)
 - [**High-level**](#high-level-installation-clicknplay) (from the Deoxys click'n'play app)
-- [**Mid-level**](#mid-level-installation-from-docker) (from Docker)
-- [**Low-level**](#low-level-installation-from-source) (from source directly).
+
+
+## Low level installation (from source)
+
+<Steps>
+### Install dependencies
+
+We first need to make sure you have everything needed to complete this tutorial.
+
+| Dependency  |  Version | Installation |
+|---|---|---|
+| Rust  | rustc 1.69.0-nightly  | `curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs \| sh` <br></br>`rustup toolchain install nightly` |
+| libssl-dev | Latest | `apt-get install -y libssl-dev` |
+| make | Latest | `apt-get install -y make` |
+| clang-11 | 11.0 | `apt-get install -y clang-11` |
+| g++ | Latest | `apt-get install -y g++` |
+| llvm | Latest | `apt-get install -y llvm` |
+| protobuf-compiler | Latest | `apt-get install -y protobuf-compiler` |
+| libasound2-dev | Latest | `apt-get install -y libasound2-dev` |
+| pkg-config | Latest | `apt-get install -y pkg-config` |
+| libz-dev | Latest | `apt-get install -y libz-dev` |
+| zstd | Latest | `apt-get install -y zstd` |
+| git | Latest | `apt-get install -y git` |
+| build-essential | Latest | `apt-get install -y build-essential` |
+
+You can use this command to easily install all necessary dependencies:
+
+```bash
+  sudo apt-get update && sudo apt-get install -y \
+      libssl-dev \
+      make \
+      clang-11 \
+      g++ \
+      llvm \
+      protobuf-compiler \
+      libasound2-dev \
+      pkg-config \
+      libz-dev \
+      zstd \
+      git \
+      build-essential
+```
+
+### Get code
+
+Fetch the code from the Official [Deoxys](https://github.com/KasarLabs/deoxys) repository in the folder of your choice.
+
+```bash
+cd <your-destination-path>
+git clone https://github.com/KasarLabs/deoxys .
+```
+
+### Build program
+
+Then let's build the dependencies. You can choose between 3 differents build modes:
+
+- **Debug** (fastest build mode, but lower performances, for testing purpose only)
+
+```bash
+cargo build --release
+```
+
+- **Release** (the recomanded build mode with close to production performances)
+
+```bash
+cargo build --release
+```
+
+- **Production** (The slowest build mode, recomanded for better performances)
+
+```bash
+cargo build --profile=production
+```
+
+### Run Deoxys
+
+**Single-Node Development Chain**
+
+This command will start the Deoxys client with a basic set arguments which will begin the synchronization with the Starknet network automatically:
+
+```bash
+cargo run --release -- --dev --sealing=manual 
+```
+
+<Callout type="info" emoji="ℹ️">
+  We now recomand you to head up to the [Configuration](/) section to custom your node parameters
+</Callout>
+
+</Steps>
+
+## Mid level installation (from docker)
+
+<Steps>
+
+### Install Docker
+
+
+{/* prettier-ignore */}
+{/* prettier-ignore */}
+<Tabs items={['MacOS', 'Linux', 'Windows']}>
+  <Tab>
+    **MacOS**: To install Docker on MacOS, follow these steps:
+    1. Visit the [Docker Hub](https://hub.docker.com/editions/community/docker-ce-desktop-mac/) and download Docker Desktop for Mac.
+    2. Open the downloaded `.dmg` file and drag the Docker icon to your Applications folder to begin the installation.
+    3. Once installed, launch Docker from your Applications folder. Docker will request your admin password to complete the setup.
+    4. After installation, you can open a terminal and run `docker --version` to verify that Docker has been installed successfully.
+  </Tab>
+  <Tab>
+    **Linux**: Docker installation on Linux varies by distribution, but here are the general steps:
+    1. Update your package manager index by running `sudo apt-get update` (This command is for distributions using `apt` like Ubuntu or Debian).
+    2. Install prerequisite packages which allow `apt` to use packages over HTTPS: `sudo apt-get install apt-transport-https ca-certificates curl software-properties-common`.
+    3. Add Docker's official GPG key: `curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -`.
+    4. Verify that you now have the key with the fingerprint by searching for the last 8 characters of the fingerprint.
+    5. Set up the Docker repository by running `sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"`.
+    6. Update the `apt` package index again: `sudo apt-get update`.
+    7. Install Docker: `sudo apt-get install docker-ce`.
+    8. To verify Docker is installed correctly, run `docker run hello-world`.
+    Note: The above commands are tailored for Ubuntu. Please adjust for your particular Linux distribution.
+  </Tab>
+  <Tab>
+    **Windows**: To install Docker on Windows, ensure you meet the following requirements:
+    - Windows 10 64-bit: Pro, Enterprise, or Education (Build 15063 or later).
+    - Hyper-V and Containers Windows features must be enabled.
+    Here are the steps:
+    1. Visit the [Docker Hub](https://hub.docker.com/editions/community/docker-ce-desktop-windows/) to download Docker Desktop for Windows.
+    2. Run the downloaded Docker Desktop installer.
+    3. Follow the installation instructions. You might be prompted to logout and log back in, or reboot your computer before you can use Docker.
+    4. After installation, run Docker by searching for it in the Start menu and selecting Docker Desktop.
+    5. To verify Docker has been installed, open a command prompt and enter `docker --version`.
+    Note: If your system does not support Hyper-V or if you are running Windows 10 Home, you may need to install Docker Toolbox instead.
+  </Tab>
+</Tabs>
+
+
+### Run docker image
+
+Lorsque vous avez correctement installé docker vous pouvez a present lancer Deoxys via ses images disponibles ici: [deoxys-v0.1.0-nightly](https://link).
+Ceci est une configuration par defaut pour plus d'information sur les configuration possible, veuillez vous rendre dans la category [Configuration](../fundamentals/configuration)
+
+
+```bash
+
+```
+
+### Check logs
+
+```bash
+
+```
+
+</Steps>
 
 ## High level installation (click'n'play)
 
@@ -96,113 +247,6 @@ Pour plus d'information sur la Deoxys App veuillez vous rendre dans la categorie
 </Steps>
 
 *Deoxys App is a project inspired by [Madara tsukuyomi](https://github.com/keep-starknet-strange/madara-tsukuyomi) from the Starknet exploration team.*
-
-## Mid level installation (from docker)
-
-
-
-<Steps>
-
-### Install Docker
-
-
-{/* prettier-ignore */}
-{/* prettier-ignore */}
-<Tabs items={['MacOS', 'Linux', 'Windows']}>
-  <Tab>
-    **MacOS**: To install Docker on MacOS, follow these steps:
-    1. Visit the [Docker Hub](https://hub.docker.com/editions/community/docker-ce-desktop-mac/) and download Docker Desktop for Mac.
-    2. Open the downloaded `.dmg` file and drag the Docker icon to your Applications folder to begin the installation.
-    3. Once installed, launch Docker from your Applications folder. Docker will request your admin password to complete the setup.
-    4. After installation, you can open a terminal and run `docker --version` to verify that Docker has been installed successfully.
-  </Tab>
-  <Tab>
-    **Linux**: Docker installation on Linux varies by distribution, but here are the general steps:
-    1. Update your package manager index by running `sudo apt-get update` (This command is for distributions using `apt` like Ubuntu or Debian).
-    2. Install prerequisite packages which allow `apt` to use packages over HTTPS: `sudo apt-get install apt-transport-https ca-certificates curl software-properties-common`.
-    3. Add Docker's official GPG key: `curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -`.
-    4. Verify that you now have the key with the fingerprint by searching for the last 8 characters of the fingerprint.
-    5. Set up the Docker repository by running `sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"`.
-    6. Update the `apt` package index again: `sudo apt-get update`.
-    7. Install Docker: `sudo apt-get install docker-ce`.
-    8. To verify Docker is installed correctly, run `docker run hello-world`.
-    Note: The above commands are tailored for Ubuntu. Please adjust for your particular Linux distribution.
-  </Tab>
-  <Tab>
-    **Windows**: To install Docker on Windows, ensure you meet the following requirements:
-    - Windows 10 64-bit: Pro, Enterprise, or Education (Build 15063 or later).
-    - Hyper-V and Containers Windows features must be enabled.
-    Here are the steps:
-    1. Visit the [Docker Hub](https://hub.docker.com/editions/community/docker-ce-desktop-windows/) to download Docker Desktop for Windows.
-    2. Run the downloaded Docker Desktop installer.
-    3. Follow the installation instructions. You might be prompted to logout and log back in, or reboot your computer before you can use Docker.
-    4. After installation, run Docker by searching for it in the Start menu and selecting Docker Desktop.
-    5. To verify Docker has been installed, open a command prompt and enter `docker --version`.
-    Note: If your system does not support Hyper-V or if you are running Windows 10 Home, you may need to install Docker Toolbox instead.
-  </Tab>
-</Tabs>
-
-
-### Run docker image
-
-Lorsque vous avez correctement installé docker vous pouvez a present lancer Deoxys via ses images disponibles ici: [deoxys-v0.1.0-nightly](https://link).
-Ceci est une configuration par defaut pour plus d'information sur les configuration possible, veuillez vous rendre dans la category [Configuration](../fundamentals/configuration)
-
-
-```bash
-
-```
-
-### Check logs
-
-```bash
-
-```
-
-</Steps>
-
-## Low level installation (from source)
-
-<Steps>
-
-### Install dependencies
-
-We first need to make sure you have everything needed to complete this tutorial.
-
-| Dependency  |  Version | Installation |
-|---|---|---|
-| Rust  | rustc 1.69.0-nightly  | `curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs \| sh` <br></br>`rustup toolchain install nightly` |
-
-
-### Get code
-
-Fetch the code from the Official [Deoxys](https://github.com/KasarLabs/deoxys) repository in the folder of your choice.
-
-```bash
-cd <your-destination-path>
-git clone https://github.com/KasarLabs/deoxys
-```
-
-### Build program
-
-Then let's build the dependencies in `release` mode
-
-```bash
-cd deoxys
-cargo build --release
-```
-
-### Run Deoxys
-
-**Single-Node Development Chain**
-
-This command will start the Deoxys client which will begin the synchronization with the Starknet network automatically:
-
-```bash
-cargo run --release -- --dev --sealing=manual 
-```
-
-</Steps>
 
 Now that you know how to launch a Deoxys full node, you might want to set some parameters in order to customize it.
 Therefore, you can go to the following section: [Configuration](https://link)
