--- a/pages/fundamentals/configuration.mdx
+++ b/pages/fundamentals/configuration.mdx
@@ -1,9 +1,9 @@
 import { Steps } from 'nextra-theme-docs'
 import { Callout } from 'nextra-theme-docs'
 
-# Starknet Full Node Configuration
+# Configuration
 
-Configuring your Starknet full node properly ensures that it runs efficiently and connects correctly to the Starknet network. Configuration can be done through three main avenues:
+Configuring your Starknet client properly ensures that it answer your specific needs. Configuration can be done through three main avenues:
 
 - Command-line arguments
 - Environment variables
@@ -19,9 +19,13 @@ Configuring your Starknet full node properly ensures that it runs efficiently an
 
 For a comprehensive list of command-line options:
 
-```bash
-starknet-full-node --help
+```rust
+cargo run -- --help
 ```
+
+<Callout type="warning" emoji="⚠️">
+  Some of the command-line options are from Substrate and not supported by Deoxys. Please reffer to the next section for the available commands.
+</Callout>
 
 Below are some essential command-line options and a categorized list of advanced configurations:
 
@@ -46,45 +50,152 @@ Below are some essential command-line options and a categorized list of advanced
 Toggle details for each namespace to view additional settings:
 
 <details>
-<summary className="nd-details-heading">&nbsp;**Networking**</summary>
+<summary className="nd-details-heading">&nbsp;**Network**</summary>
 <p>
 
-- **`--port <port>`**: Set the network listening port.
+<br />
+- **`-n, --network <NETWORK>`**: The network type to connect to.
+  - [default: integration]
 
-- **`--bootnodes <nodes>`**: Define initial peers to connect with on startup.
+  Possible values:
+  - `main`: The main network (mainnet)
+  - `test`: The test network (testnet)
+  - `integration`: The integration network
+
+<br />
+- **`--port <PORT>`**: Set the network listening port.
+
+<br />
+- **`--l1-endpoint <URL>`**: Specify the Layer 1 endpoint the node will verify its state from.
+
+<br />
+- **`--gateway-key <GATEWAY_KEY>`**: Gateway API key to avoid rate limiting (optional).
+
+<br />
+- **`--sync-polling-interval <SYNC_POLLING_INTERVAL>`**: Polling interval, in seconds.
+  - [default: 2]
+
+<br />
+- **`--no-sync-polling`**: Stop sync polling.
+
+<br />
+- **`--n-blocks-to-sync <N_BLOCKS_TO_SYNC>`**: Number of blocks to sync.
+
+<br />
+- **`--starting-block <STARTING_BLOCK>`**: The block you want to start syncing from.
 
 </p>
 </details>
 
 <details>
-<summary className="nd-details-heading">&nbsp;**Consensus**</summary>
+<summary className="nd-details-heading">&nbsp;**RPC**</summary>
 <p>
+<br />
+- **`--rpc-external`**: Listen to all RPC interfaces. Default is local. Note: not all RPC methods are safe to be exposed publicly. Use an RPC proxy server to filter out dangerous methods. Use `--unsafe-rpc-external` to suppress the warning if you understand the risks.
+<br />
+- **`--unsafe-rpc-external`**: Listen to all RPC interfaces. Same as `--rpc-external`.
+<br />
+- **`--rpc-methods <METHOD SET>`**: RPC methods to expose.
+  - `unsafe`: Exposes every RPC method.
+  - `safe`: Exposes only a safe subset of RPC methods, denying unsafe RPC methods.
+  - `auto`: Acts as `safe` if RPC is served externally, e.g. when `--rpc-external` is passed, otherwise acts as `unsafe`.
+  - [default: auto]
 
-- **`--sealer <type>`**: Choose the block sealer type.
-
-- **`--gas-floor-target <value>`**: Set a target for block gas limit.
+  Possible values:
+  - `auto`: Expose every RPC method only when RPC is listening on `localhost`, otherwise serve only safe RPC methods.
+  - `safe`: Allow only a safe subset of RPC methods.
+  - `unsafe`: Expose every RPC method (even potentially unsafe ones).
+<br />
+- **`--rpc-max-request-size <RPC_MAX_REQUEST_SIZE>`**: Set the maximum RPC request payload size for both HTTP and WS in megabytes.
+  - [default: 15]
+<br />
+- **`--rpc-max-response-size <RPC_MAX_RESPONSE_SIZE>`**: Set the maximum RPC response payload size for both HTTP and WS in megabytes.
+  - [default: 15]
+<br />
+- **`--rpc-max-subscriptions-per-connection <RPC_MAX_SUBSCRIPTIONS_PER_CONNECTION>`**: Set the maximum concurrent subscriptions per connection.
+  - [default: 1024]
+<br />
+- **`--rpc-port <PORT>`**: Specify JSON-RPC server TCP port.
+<br />
+- **`--rpc-max-connections <COUNT>`**: Maximum number of RPC server connections.
+  - [default: 100]
+<br />
+- **`--rpc-cors <ORIGINS>`**: Specify browser Origins allowed to access the HTTP & WS RPC servers. A comma-separated list of origins (protocol:domain or special `null` value). Value of `all` will disable origin validation. Default is to allow localhost origins. When running in --dev mode the default is to allow all origins.
 
 </p>
 </details>
+
 
 <details>
 <summary className="nd-details-heading">&nbsp;**Database**</summary>
 <p>
-
-- **`--db-cache <size>`**: Customize the database cache size.
-
-- **`--state-cache-size <size>`**: Adjust the state cache size for efficiency.
-
+<br />
+- **`-d, --base-path <PATH>`** [default: /tmp/deoxys] Specify custom base path
+<br />
+- **`--tmp`**: Run a temporary node. A temporary directory will be created to store the configuration and will be deleted at the end of the process. Note: the directory is random per process execution. This directory is used as base path which includes: database, node key and keystore. When `--dev` is given and no explicit `--base-path`, this option is implied.
+<br />
+- **`--cache`**: When enabled, more information about the blocks and their transactions is cached and stored in the database. This may improve response times for RPCs that require that information, but it also increases the memory footprint of the node.
+<br />
+- **`--db-cache <MiB>`**: Limit the memory the database cache can use.
+<br />
+- **`--trie-cache-size <Bytes>`**: Specify the state cache size. Providing `0` will disable the cache.
+  - [default: 67108864]
+<br />
+- **`--backup-every-n-blocks <BACKUP_EVERY_N_BLOCKS>`**: Specify the number of blocks after which a backup should be created.
+<br />
+- **`--backup-dir <BACKUP_DIR>`**: Specify the directory where backups should be stored.
+<br />
+- **`--restore-from-latest-backup`**: Restore the database from the latest backup available.
+<br />
 </p>
 </details>
 
 <details>
 <summary className="nd-details-heading">&nbsp;**Logging**</summary>
 <p>
+<br />
+- **`-l, --log <LOG_PATTERN>...`**: Sets a custom logging filter. Syntax is `<target>=<level>`, e.g. `-lsync=debug`. Log levels (least to most verbose) are error, warn, info, debug, and trace. By default, all targets log `info`. The global log level can be set with `-l<level>`.
+<br />
+- **`--detailed-log-output`**: Enable detailed log output. This includes displaying the log target, log level, and thread name. This is automatically enabled when something is logged with any higher level than `info`.
+<br />
+- **`--disable-log-color`**: Disable log color output.
+<br />
+- **`--enable-log-reloading`**: Enable feature to dynamically update and reload the log filter. Be aware that enabling this feature can lead to a performance decrease up to factor six or more. Depending on the global logging level, the performance decrease changes. The `system_addLogFilter` and `system_resetLogFilter` RPCs will have no effect with this option not being set.
+<br />
+- **`--tracing-targets <TARGETS>`**: Sets a custom profiling filter. Syntax is the same as for logging: `<target>=<level>`.
+<br />
+- **`--tracing-receiver <RECEIVER>`**: Receiver to process tracing messages.
+  - [default: log]
 
-- **`--log <level>`**: Control the verbosity of logs.
+  Possible values:
+  - `log`: Output the tracing records using the log.
 
-- **`--log-filters <filters>`**: Apply fine-grained filters to log output.
+</p>
+</details>
+
+<details>
+<summary className="nd-details-heading">&nbsp;**Metrics**</summary>
+<p>
+<br />
+- **`--telemetry-url <URL VERBOSITY>`**: The URL of the telemetry server to connect to. This flag can be passed multiple times as a means to specify multiple telemetry endpoints. Verbosity levels range from 0-9, with 0 denoting the least verbosity. Expected format is 'URL VERBOSITY', e.g. `--telemetry-url 'wss://foo/bar 0'`.
+<br />
+- **`--no-telemetry`**: Disable connecting to the Substrate telemetry server. Telemetry is on by default on global chains.
+<br />
+- **`--prometheus-port <PORT>`**: Specify Prometheus exporter TCP Port.
+<br />
+- **`--prometheus-external`**: Expose Prometheus exporter on all interfaces. Default is local.
+<br />
+- **`--no-prometheus`**: Do not expose a Prometheus exporter endpoint. Prometheus metric endpoint is enabled by default.
+
+</p>
+</details>
+
+
+<details>
+<summary className="nd-details-heading">&nbsp;**P2P**</summary>
+<p>
+
+**Comming soon**
 
 </p>
 </details>
